Fixing header alignment

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -32,11 +32,17 @@
 .header-actions {
   position: absolute;
   top: 0;
-  right: 0;
   height: 100%;
   padding: 0 $spacer/2;
   display: flex;
   align-items: center;
+
+  &:first-child {
+    left: 0;
+  }
+  &:last-child {
+    right: 0;
+  }
 }
 
 .header-action {
